--- a/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
+++ b/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
@@ -1,7 +1,7 @@
-blueprint:
+ blueprint:
   name: "⚡\U0001F4A1 JJs Light Control With Helpers \U0001F4A1⚡"
   description: "# JJs Light Control With Helpers\n
-    **Version: 1.3.16**\n
+    **Version: 1.3.17**\n
     ## Light control automation that has:\n
     - Two light scenes, one for day and night\n
     - Wont override the current light state if manually changed\n
@@ -370,7 +370,7 @@ blueprint:
       collapsed: true
       input:
         in_bool_auto_enable:
-          name: Input boolean enable (true if left empty)
+          name: Input boolean automation enable (true if left empty)
           description:
             "### \U0001F51B\n- input_boolean helper for enabling and disabling
             this automation"
@@ -380,6 +380,14 @@ blueprint:
               domain:
                 - input_boolean
               multiple: false
+        in_bool_transition_enable:
+          name: Input boolean light transition enable
+          description:
+            "### \U0001F51B\n- input_boolean for enabling and disabling
+            the light ramp to transition time."
+          default: true
+          selector:
+            boolean:
   source_url: https://github.com/Jeffreyjelly/jjs_light_ctrl_with_helpers/blob/main/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
 mode: single
 variables:
@@ -573,12 +581,28 @@ action:
                           }}
                         alias: Time condition day
                     then:
+                      - if:
+                        - condition: template
+                          value_template: "{{ in_bool_transition_enable }}"
+                        then:
+                          - service: scene.turn_on
+                            target:
+                              entity_id: !input scene_day_light
+                            data:
+                              transition: "{{states(in_num_transition_time_ent) | int }}"
+                        else:
+                          - service: scene.turn_on
+                            target:
+                              entity_id: !input scene_day_light
+                      - delay:
+                          hours: 0
+                          minutes: 0
+                          seconds: "{{states(in_num_transition_time_ent) | int }}"
+                          milliseconds: 0
+                      #added this second turn on for finicky lights that don't turn on the first time they're issued to turn on
                       - service: scene.turn_on
                         target:
                           entity_id: !input scene_day_light
-                        data:
-                          transition: "{{states(in_num_transition_time_ent) | int }}"
-                        metadata: {}
                     else:
                       - if:
                           - condition: template
@@ -597,12 +621,28 @@ action:
                               }}
                             alias: Time condition night
                         then:
+                          - if:
+                            - condition: template
+                              value_template: "{{ in_bool_transition_enable }}"
+                            then:
+                              - service: scene.turn_on
+                                target:
+                                  entity_id: !input scene_night_light
+                                data:
+                                  transition: "{{ states(in_num_transition_time_ent)| int }}"
+                            else:
+                              - service: scene.turn_on
+                                target:
+                                  entity_id: !input scene_night_light
+                          - delay:
+                              hours: 0
+                              minutes: 0
+                              seconds: "{{states(in_num_transition_time_ent) | int }}"
+                              milliseconds: 0
+                          #added this second turn on for finicky lights that don't turn on the first time they're issued to turn on
                           - service: scene.turn_on
                             target:
                               entity_id: !input scene_night_light
-                            data:
-                              transition: "{{ states(in_num_transition_time_ent)| int }}"
-                            metadata: {}
                         alias: Night path
                     alias: Set light scene since lights were off
                 # if the timer dim_to_off is on but lights are off return to the saved light scene
@@ -612,22 +652,39 @@ action:
                         entity_id: !input timer_dim_to_off
                         state: active
                     then:
+                      - service: timer.cancel
+                        target:
+                          entity_id: !input timer_dim_to_off
+                      - if:
+                        - condition: template
+                          value_template: "{{ in_bool_transition_enable }}"
+                        then:
+                          - service: scene.turn_on
+                            data:
+                              transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
+                            target:
+                              entity_id:
+                                - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
+                        else:
+                          - service: scene.turn_on
+                            target:
+                              entity_id:
+                                - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
+                      - delay:
+                          hours: 0
+                          minutes: 0
+                          seconds: "{{states(in_num_transition_time_fast_ent) | int }}"
+                          milliseconds: 0
+                      #added this second turn on for finicky lights that don't turn on the first time they're issued to turn on
                       - service: scene.turn_on
-                        data:
-                          transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
                         target:
                           entity_id:
                             - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
-                      - service: timer.cancel
-                        data: {}
-                        target:
-                          entity_id: !input timer_dim_to_off
                     alias:
                       if timer dim_to_off is active revert to saved scene else, clear out
                       the on_to_dim timer
                     else:
                       - service: timer.cancel
-                        data: {}
                         target:
                           entity_id: !input timer_on_to_dim
                 alias:
@@ -703,16 +760,24 @@ action:
                     entity_id: !input timer_dim_to_off
                     state: active
                 then:
-                  - service: scene.turn_on
-                    data:
-                      transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
-                    target:
-                      entity_id:
-                        - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
                   - service: timer.cancel
-                    data: {}
                     target:
                       entity_id: !input timer_dim_to_off
+                  - if:
+                    - condition: template
+                      value_template: "{{ in_bool_transition_enable }}"
+                    then:
+                      - service: scene.turn_on
+                        data:
+                          transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
+                        target:
+                          entity_id:
+                            - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
+                    else:
+                      - service: scene.turn_on
+                        target:
+                          entity_id:
+                            - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
                 alias:
                   if timer dim_to_off is active revert to saved scene and cancel timer
                   else, cancel the on_to_dim timer
@@ -757,24 +822,50 @@ action:
                               {% if int(states(in_num_dim_amt_ent)) >
                               state_attr(light_target_ent,'brightness') %} True {% endif %}
                         then:
-                          - service: light.turn_on
-                            data:
-                              brightness_step: >-
-                                {{ (((state_attr(light_target_ent,'brightness')|int(0)) * -1) + 5) }}
-                              transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
-                            target:
-                              entity_id: !input light_target
-                              #hoping that using active lights here will not turn on extra lights
-                              # entity_id: "{{ active_lights }}"
+                        
+                          - if:
+                            - condition: template
+                              value_template: "{{ in_bool_transition_enable }}"
+                            then:
+                              - service: light.turn_on
+                                data:
+                                  brightness_step: >-
+                                    {{ (((state_attr(light_target_ent,'brightness')|int(0)) * -1) + 5) }}
+                                  transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
+                                target:
+                                  entity_id: !input light_target
+                                  #hoping that using active lights here will not turn on extra lights
+                                  # entity_id: "{{ active_lights }}"
+                            else:
+                              - service: light.turn_on
+                                data:
+                                  brightness_step: >-
+                                    {{ (((state_attr(light_target_ent,'brightness')|int(0)) * -1) + 5) }}
+                                target:
+                                  entity_id: !input light_target
+                                  #hoping that using active lights here will not turn on extra lights
+                                  # entity_id: "{{ active_lights }}"
                         else:
-                          - service: light.turn_on
-                            data:
-                              brightness_step: "{{ ((states(in_num_dim_amt_ent)|int)*-1) }}"
-                              transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
-                            target:
-                              entity_id: !input light_target
-                              #hoping that using active lights here will not turn on extra lights
-                              # entity_id: "{{ active_lights }}"
+                          - if:
+                            - condition: template
+                              value_template: "{{ in_bool_transition_enable }}"
+                            then:
+                              - service: light.turn_on
+                                data:
+                                  brightness_step: "{{ ((states(in_num_dim_amt_ent)|int)*-1) }}"
+                                  transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
+                                target:
+                                  entity_id: !input light_target
+                                  #hoping that using active lights here will not turn on extra lights
+                                  # entity_id: "{{ active_lights }}"
+                            else:
+                              - service: light.turn_on
+                                data:
+                                  brightness_step: "{{ ((states(in_num_dim_amt_ent)|int)*-1) }}"
+                                target:
+                                  entity_id: !input light_target
+                                  #hoping that using active lights here will not turn on extra lights
+                                  # entity_id: "{{ active_lights }}"
                   - if:
                       - condition: template
                         # Daytime condition:
@@ -841,11 +932,19 @@ action:
                         entity_id: !input light_target
                         state: "on"
                 then:
-                  - service: light.turn_off
-                    data:
-                      transition: "{{ states(in_num_transition_time_ent) | int }}"
-                    target:
-                      entity_id: !input light_target
+                  - if:
+                    - condition: template
+                      value_template: "{{ in_bool_transition_enable }}"
+                    then:
+                      - service: light.turn_off
+                        data:
+                          transition: "{{ states(in_num_transition_time_ent) | int }}"
+                        target:
+                          entity_id: !input light_target
+                    else:
+                      - service: light.turn_off
+                        target:
+                          entity_id: !input light_target
                   - if:
                       - condition: template
                         # Daytime condition:
