--- a/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
+++ b/blueprints/JJs_light_ctrl_w_helpers/JJs_light_ctrl_w_helpers.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: "⚡\U0001F4A1 JJs Light Control With Helpers \U0001F4A1⚡"
   description: "# JJs Light Control With Helpers\n
-    **Version: 1.3.17**\n
+    **Version: 1.3.18**\n
     ## Light control automation that has:\n
     - Two light scenes, one for day and night\n
     - Wont override the current light state if manually changed\n
@@ -603,6 +603,8 @@ action:
                       - service: scene.turn_on
                         target:
                           entity_id: !input scene_day_light
+                        data:
+                          transition: "{{states(in_num_transition_time_ent) | int }}"
                     else:
                       - if:
                           - condition: template
@@ -643,6 +645,8 @@ action:
                           - service: scene.turn_on
                             target:
                               entity_id: !input scene_night_light
+                            data:
+                              transition: "{{ states(in_num_transition_time_ent)| int }}"
                         alias: Night path
                     alias: Set light scene since lights were off
                 # if the timer dim_to_off is on but lights are off return to the saved light scene
@@ -677,6 +681,8 @@ action:
                           milliseconds: 0
                       #added this second turn on for finicky lights that don't turn on the first time they're issued to turn on
                       - service: scene.turn_on
+                        data:
+                          transition: "{{ states(in_num_transition_time_fast_ent) | int }}"
                         target:
                           entity_id:
                             - "scene.jjs_recovery_scene_for_zone_{{ light_target_ent.split('.')[-1] }}"
@@ -822,7 +828,6 @@ action:
                               {% if int(states(in_num_dim_amt_ent)) >
                               state_attr(light_target_ent,'brightness') %} True {% endif %}
                         then:
-                        
                           - if:
                             - condition: template
                               value_template: "{{ in_bool_transition_enable }}"
